k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: rallycoding/multi-worker
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"




# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: worker-deployment
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       component: worker
#   template:
#     metadata:
#       labels:
#         component: worker
#     spec:
#       containers:
#         - name: worker
#           image: rallycoding/multi-worker
#           env:
#             - name: REDIS_HOST
#               value: redis-cluster-ip-service
#             - name: REDIS_PORT
#               value: '6379'
