k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000

          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000





# apiVersion: networking.k8s.io/v1
# # UPDATE API
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     # REMOVE CLASSNAME ANNOTATION
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#     # ADD ANNOTATION
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     # ADD ANNOTATION
# spec:
#   ingressClassName: nginx
#   # ADD INGRESSCLASSNAME FIELD
#   rules:
#     - http:
#         paths:
#           - path: /?(.*)
#             # UPDATE PATH
#             pathType: ImplementationSpecific
#             # ADD PATHTYPE
#             backend:
#               service:
#                 # UPDATE SERVICE FIELDS
#                 name: client-cluster-ip-service
#                 port:
#                   number: 3000
#           - path: /api/?(.*)
#             # UPDATE PATH
#             pathType: ImplementationSpecific
#             # ADD PATHTYPE
#             backend:
#               service:
#                 # UPDATE SERVICE FIELDS
#                 name: server-cluster-ip-service
#                 port:
#                   number: 5000
